// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HibernateClusterModal /> renders correctly 1`] = `
<Modal
  data-testid="hibernate-cluster-modal"
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Cancel"
  title="Hibernate cluster"
>
  <Form
    onSubmit={[Function]}
  >
    <p>
      Moving 
      <b>
        some-name
      </b>
       cluster to Hibernating state will block any operation for this cluster. While hibernating, the cluster will not consume any virtual machine instance or network resources, but will still count against subscription quota. Note that version upgrades will not occur.
    </p>
    <Alert
      title="
            In case the cluster’s cloud provider is not responsive,
            resuming from hibernation might not be completed and will require manual intervention for the cluster to be restored.   
          "
      variant="warning"
    />
    This can be undone at any time.
  </Form>
</Modal>
`;

exports[`<HibernateClusterModal /> renders correctly when an error occurs 1`] = `
<Modal
  data-testid="hibernate-cluster-modal"
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Cancel"
  title="Hibernate cluster"
>
  <Form
    onSubmit={[Function]}
  >
    <ErrorBox
      message="Error hibernating cluster"
      response={
        Object {
          "error": true,
          "errorMessage": "this is an error",
        }
      }
    />
    <p>
      Moving 
      <b>
        some-name
      </b>
       cluster to Hibernating state will block any operation for this cluster. While hibernating, the cluster will not consume any virtual machine instance or network resources, but will still count against subscription quota. Note that version upgrades will not occur.
    </p>
    <Alert
      title="
            In case the cluster’s cloud provider is not responsive,
            resuming from hibernation might not be completed and will require manual intervention for the cluster to be restored.   
          "
      variant="warning"
    />
    This can be undone at any time.
  </Form>
</Modal>
`;

exports[`<HibernateClusterModal /> renders correctly when pending 1`] = `
<Modal
  data-testid="hibernate-cluster-modal"
  isPending={true}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Cancel"
  title="Hibernate cluster"
>
  <Form
    onSubmit={[Function]}
  >
    <p>
      Moving 
      <b>
        some-name
      </b>
       cluster to Hibernating state will block any operation for this cluster. While hibernating, the cluster will not consume any virtual machine instance or network resources, but will still count against subscription quota. Note that version upgrades will not occur.
    </p>
    <Alert
      title="
            In case the cluster’s cloud provider is not responsive,
            resuming from hibernation might not be completed and will require manual intervention for the cluster to be restored.   
          "
      variant="warning"
    />
    This can be undone at any time.
  </Form>
</Modal>
`;
